prog logos, skills html and css code

--- a/Home.html
+++ b/Home.html
@@ -30,6 +30,24 @@
         <img class="john-image" src="john-image.jpeg" alt="john image">
     </section>
 
+    <section class="skills">
+        <div class="skills-container">
+            <img src="programming-logos/html5.svg" alt="html">
+            <img src="programming-logos/css3.svg" alt="css">
+            <img src="programming-logos/javascript.svg" alt="js">
+            <img src="programming-logos/typescript.svg" alt="ts">
+            <img src="programming-logos/c.svg" alt="c">
+            <img src="programming-logos/c++.svg" alt="c++">
+            <img src="programming-logos/java.svg" alt="java">
+            <img src="programming-logos/php.svg" alt="php">
+            <img src="programming-logos/python.svg" alt="python">
+            <img src="programming-logos/nodejs.svg" alt="node">
+            <img src="programming-logos/git.svg" alt="git">
+            <img src="programming-logos/vscode.svg" alt="vsc">
+        </div>
+    </section>
+
+
 </body>
 
 </html>
