skills img, README

--- a/Home.html
+++ b/Home.html
@@ -38,11 +38,11 @@
             <img src="programming-logos/typescript.svg" alt="ts">
             <img src="programming-logos/c.svg" alt="c">
             <img src="programming-logos/c++.svg" alt="c++">
-            <img src="programming-logos/java.svg" alt="java">
+            <img src="programming-logos/kotlin.svg" alt="kotlin">
             <img src="programming-logos/php.svg" alt="php">
             <img src="programming-logos/python.svg" alt="python">
-            <img src="programming-logos/nodejs.svg" alt="node">
-            <img src="programming-logos/git.svg" alt="git">
+            <img src="programming-logos/ruby.svg" alt="ruby">
+            <img src="programming-logos/react.svg" alt="react">
             <img src="programming-logos/vscode.svg" alt="vsc">
         </div>
     </section>
