--- a/Home.html
+++ b/Home.html
@@ -32,6 +32,7 @@
 
     <section class="skills">
         <div class="skills-container">
+            <h2>Skills</h2>
             <img src="programming-logos/html5.svg" alt="html">
             <img src="programming-logos/css3.svg" alt="css">
             <img src="programming-logos/javascript.svg" alt="js">
