proyects html section and proyect css styles

--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <a href="#">Home</a>
             <a href="#">Skills</a>
-            <a href="#">Pages</a>
+            <a href="#">Proyects</a>
             <a href="#">Contact</a>
         </nav>
     </header>
@@ -36,15 +36,65 @@
             <img src="programming-logos/html5.svg" alt="html">
             <img src="programming-logos/css3.svg" alt="css">
             <img src="programming-logos/javascript.svg" alt="js">
+            <img src="programming-logos/angular.svg" alt="angular">
             <img src="programming-logos/typescript.svg" alt="ts">
             <img src="programming-logos/c.svg" alt="c">
             <img src="programming-logos/c++.svg" alt="c++">
+            <img src="programming-logos/spring.svg" alt="spring">
             <img src="programming-logos/kotlin.svg" alt="kotlin">
             <img src="programming-logos/php.svg" alt="php">
+            <img src="programming-logos/postgresql.svg" alt="postgresql">
             <img src="programming-logos/python.svg" alt="python">
             <img src="programming-logos/ruby.svg" alt="ruby">
             <img src="programming-logos/react.svg" alt="react">
+            <img src="programming-logos/redux.svg" alt="redux">
+            <img src="programming-logos/vuejs.svg" alt="vue">
+            <img src="programming-logos/boostrap.svg" alt="boostrap">
             <img src="programming-logos/vscode.svg" alt="vsc">
+        </div>
+    </section>
+
+    <h2 class="h2proyects">Proyects</h2>
+    <section class="pages">
+        <div class="page-container">
+            <img src="pages/1.jpeg" alt="store">
+            <div class="title">Online Shop Website</div>
+            <div class="description">MultiShop – shopping website built with Bootstrap v4
+                framework. Responsive in all devices
+                screens, including desktop computers, laptops, iPad, tablets, iPhones & mobiles.
+                includes Homepage, Shop, Shop Detail, Shopping Cart,
+                Checkout, and Contact page.
+            </div>
+            <div class="tools-container">
+                <div class="tools">React</div>
+                <div class="tools">Bootstrap</div>
+                <div class="tools">postgresql</div>
+            </div>
+        </div>
+        <div class="page-container">
+            <img src="pages/3.jpeg" alt="store">
+            <div class="title">Bakery Shop Website</div>
+            <div class="description">Sweet Dreams – bakery shop wich includes inventory management and tracking to
+                ensure accurate stock levels and real-time updates, affiliate Program and discounts and gift
+                certificates.
+            </div>
+            <div class="tools-container">
+                <div class="tools">Kotlin</div>
+                <div class="tools">Spring</div>
+            </div>
+        </div>
+        <div class="page-container">
+            <img src="pages/2.jpeg" alt="store">
+            <div class="title">Hospital Management</div>
+            <div class="description">Hospital Management - user-friendly and visually website
+                designed for a healthcare facility.
+                Whether it’s for patient management, doctor booking, or offering therapy, surgery, and skincare
+                services, this page covers it all, ensuring an accessible comprehensive service.
+            </div>
+            <div class="tools-container">
+                <div class="tools">Angular</div>
+                <div class="tools">Typescript</div>
+            </div>
         </div>
     </section>
 
